fix: align arrow height to title

--- a/src/components/SP/pages/About/About.scss
+++ b/src/components/SP/pages/About/About.scss
@@ -13,6 +13,11 @@
   color: $fontLime;
 }
 
+.arrowClick {
+  display: flex;
+  align-items: center;
+}
+
 .arrow {
   margin-right: 1rem;
   vertical-align: super;
